--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Juhana Autti",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0"
