--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "fsonodebackend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf build && cd ../FullStackOpen/osa2/puhelinluettelo/ && npm run build && cp -r build ../../../FSONodeBackend",
-    "deploy": "git push heroku main",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
-    "logs:prod": "npx heroku logs --tail"
-  },
-  "author": "Juhana Autti",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "mongoose": "^6.1.4",
-    "mongoose-unique-validator": "^3.0.0",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+	"name": "fsonodebackend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon index.js",
+		"start": "node index.js",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build:ui": "rm -rf build && cd ../FullStackOpen/osa2/puhelinluettelo/ && npm run build && cp -r build ../../../FSONodeBackend",
+		"deploy": "git push heroku main",
+		"deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
+		"logs:prod": "npx heroku logs --tail",
+		"lint": "eslint ."
+	},
+	"author": "Juhana Autti",
+	"license": "MIT",
+	"dependencies": {
+		"dotenv": "^10.0.0",
+		"express": "^4.17.2",
+		"mongoose": "^6.1.4",
+		"mongoose-unique-validator": "^3.0.0",
+		"morgan": "^1.10.0"
+	},
+	"devDependencies": {
+		"eslint": "^8.5.0",
+		"nodemon": "^2.0.15"
+	}
 }
